# clang-study-series

./: .gitignore  README.md
modern_c_project/: .clang-format  .clang-tidy  CMakeLists.txt  README.md
modern_c_project/include/: string_utils.h
modern_c_project/src/: main.c  math_utils.c  string_utils.c
modern_c_project/tests/: test_math.c  test_string.c
